fixed image stretch

--- a/Portfolio/assets/css/about.css
+++ b/Portfolio/assets/css/about.css
@@ -236,6 +236,11 @@ h2{
     font-size: 3vw;
 }
 
+.aboutpics{
+    width: 20vw;
+    height: auto;
+}
+
 @media screen and (min-width: 800px) {
     /* cv link */
     .navBar:last-child{
